Solved layout issue in top-left section.

--- a/Content/style.css
+++ b/Content/style.css
@@ -691,7 +691,7 @@ section.bl-expand .bl-icon-close {
 .bl-main>section.topleft {
   top: 24px;
   left: 0;
-  position: relative;
+  /*position: relative;*/
   background: transparent;
 }
 
